# src/app/api/models.ts
@@ -1,5 +1,8 @@
+export { GradeMinDto } from './models/grade-min-dto';
 export { GradeDto } from './models/grade-dto';
 export { StudentMinDto } from './models/student-min-dto';
 export { StudentDto } from './models/student-dto';
+export { SubjectMinDto } from './models/subject-min-dto';
 export { SubjectDto } from './models/subject-dto';
+export { TeacherMinDto } from './models/teacher-min-dto';
 export { TeacherDto } from './models/teacher-dto';
