# src/app/api/models/grade-min-dto.ts
@@ -1,0 +1,5 @@
+/* tslint:disable */
+export interface GradeMinDto {
+  id?: number;
+  value?: number;
+}
