# src/app/api/models/subject-min-dto.ts
@@ -1,0 +1,5 @@
+/* tslint:disable */
+export interface SubjectMinDto {
+  id?: number;
+  name?: null | string;
+}
