# src/app/api/models/teacher-min-dto.ts
@@ -1,0 +1,7 @@
+/* tslint:disable */
+export interface TeacherMinDto {
+  firstName?: null | string;
+  id?: number;
+  lastName?: null | string;
+  middleName?: null | string;
+}
